Import of PDONELAN/Padre-Plugin-WebGUI-1.002 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-WebGUI
gitpan-cpan-version:      1.002
gitpan-cpan-path:         PDONELAN/Padre-Plugin-WebGUI-1.002.tar.gz
gitpan-cpan-author:       PDONELAN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -32,12 +32,13 @@ requires:
   Padre::Plugin: 0
   Padre::Util: 0
   Padre::Wx: 0
-  perl: 5.006
+  perl: 5.008
+  utf8: 0
 resources:
   bugtracker: http://github.com/pdonelan/Padre-Plugin-WebGUI/issues
-  homepage: https://github.com/pdonelan/Padre-Plugin-WebGUI/tree
-  repository: https://github.com/pdonelan/Padre-Plugin-WebGUI.git
-version: 1.001
+  homepage: http://github.com/pdonelan/Padre-Plugin-WebGUI/tree
+  repository: git://github.com/pdonelan/Padre-Plugin-WebGUI.git
+version: 1.002
 x_Dist_Zilla:
   plugins:
     -
